added validation for three input fields on server side

--- a/ch02_ex1_sol/index.html
+++ b/ch02_ex1_sol/index.html
@@ -12,13 +12,16 @@
 
             <div id="data">
                 <label>Product Description:</label>
-                <input type="text" name="product_description"><br>
+                <!--add required attribute for empty submit-->
+                <input type="text" name="product_description" required><br>
 
                 <label>List Price:</label>
-                <input type="text" name="list_price"><br>
+                <!--add required attribute for empty submit-->
+                <input type="text" name="list_price" required><br>
 
                 <label>Discount Percent:</label>
-                <input type="text" name="discount_percent"><span>%</span><br>
+                <!--add required attribute for empty submit-->
+                <input type="text" name="discount_percent" required><span>%</span><br>
             </div>
 
             <div id="buttons">
