--- a/ch02_ex1_sol/index.html
+++ b/ch02_ex1_sol/index.html
@@ -29,6 +29,17 @@
                 <input type="submit" value="Calculate Discount"><br>
             </div>
 
+            <!--display errors from array in php file-->
+            <div style="color: red; padding-bottom: .5em;">
+                <?php echo $errorArray[0]?>
+            </div>
+            <div style="color: red; padding-bottom: .5em;">
+                <?php echo $errorArray[1]?>
+            </div>
+            <div style="color: red;">
+                <?php echo $errorArray[2]?>
+            </div>
+
         </form>
     </main>
 </body>
